# bcalm

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  VERSION
.circleci/: config.yml
bglue/: bglue.cpp  glue.cpp  glue.hpp  unionFind.hpp
bidirected-graphs-in-bcalm2/: bidirected-graphs-in-bcalm2.html  bidirected-graphs-in-bcalm2.md  figs.pptx
example/: run-tiny.sh  tiny_read.fa
example/circular_unitigs_unittests/: CMD  README  test1.fa  test2.fa  test3.fa
example/pufferize/: refs.fa  run.sh
example/uf/: Makefile
scripts/: abundance_stats.py  convertToGFA.py  delivery.sh  memused  pufferize.py  release.sh  split_unitigs.py  unitigEvaluator.cpp
src/: bcalm_1.cpp  binSeq.cpp  binSeq.h  glue.cpp  glue.hpp  main.cpp  ograph.cpp  ograph.h  ographBin.cpp  ographBin.h  unionFind.hpp
test/: minitip.fa  run-tiny.sh  simple_test.sh
test/uf/: Makefile  testUF.cpp
tools/: CMakeLists.txt
tools/bcalm/src/: bcalm_1.cpp  bcalm_1.hpp  binSeq.cpp  binSeq.h  glue.cpp  glue.hpp  main.cpp  ograph.cpp  ograph.h  unionFind.cpp  unionFind.hpp
